@@ -1,10 +1,13 @@
 package org.sing_group.compi.core.runner;
 
-import java.io.IOException;
+import static java.util.Arrays.asList;
 
-import org.sing_group.compi.core.TextVariableResolver;
-import org.sing_group.compi.core.VariableResolver;
-import org.sing_group.compi.xmlio.entities.Foreach;
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+
+import org.sing_group.compi.core.resolver.VariableResolver;
+import org.sing_group.compi.core.resolver.VariableResolverUtils;
 import org.sing_group.compi.xmlio.entities.Task;
 import org.sing_group.compi.xmlio.entities.runners.Runner;
 
@@ -12,35 +15,29 @@ public class CustomRunnerProcessCreator implements ProcessCreator {
 
   private Runner runner;
   private VariableResolver resolver;
-  
+
   public CustomRunnerProcessCreator(Runner runner, VariableResolver resolver) {
     this.runner = runner;
     this.resolver = resolver;
   }
-  
+
   @Override
   public Process createProcess(Task task) {
-    this.runner.getRunnerCode();
-    
-    //resolve code
-    String runnerResolvedCode = this.runner.getRunnerCode();
-    runnerResolvedCode = runnerResolvedCode.replace("${task-code}", task.getToExecute());
-    runnerResolvedCode = runnerResolvedCode.replace("${task-id}", task.getId());
-    final TextVariableResolver textResolver = new TextVariableResolver(
-      
-      (var) -> {
-        
-        if (task instanceof Foreach && var.equals(((Foreach) task).getForeachIteration().getTask().getAs())) {
-          return ((Foreach) task).getForeachIteration().getIterationValue();
-        }
-        return resolver.resolveVariable(var);
-      }
-     );
-    
-    runnerResolvedCode = textResolver.resolveAllVariables(runnerResolvedCode);
-    String[] commandsToExecute = { "/bin/sh", "-c", runnerResolvedCode };
     try {
-      return Runtime.getRuntime().exec(commandsToExecute);
+      String[] commandsToExecute = {
+        "/bin/sh", "-c", this.runner.getRunnerCode()
+      };
+      ProcessBuilder builder = new ProcessBuilder(asList(commandsToExecute));
+
+      VariableResolverUtils resolverUtils = new VariableResolverUtils(this.resolver);
+      resolverUtils.addVariablesToEnvironmentForTask(task, builder);
+      
+      Map<String, String> runnerExtraVariables = new HashMap<>();
+      runnerExtraVariables.put("task_code", task.getToExecute());
+      runnerExtraVariables.put("task_id", task.getId());
+      builder.environment().putAll(runnerExtraVariables);
+      
+      return builder.start();
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
